[gd_scene load_steps=20 format=3 uid="uid://5tsw16su4434"]

[ext_resource type="Script" uid="uid://u1o2d01siw1w" path="res://ui/ui.gd" id="1_8asm8"]
[ext_resource type="Theme" uid="uid://ckgfig5tmql4q" path="res://ui/main_menu.tres" id="2_pa1oa"]
[ext_resource type="Texture2D" uid="uid://cmerto3sacgis" path="res://ui/assets/gold_coin.png" id="3_gycre"]
[ext_resource type="Texture2D" uid="uid://bh5t6hw5wbqb2" path="res://characters/player/mc.png" id="3_hrmpd"]
[ext_resource type="Texture2D" uid="uid://be3lu34igme75" path="res://ui/assets/background.png" id="3_os0ka"]
[ext_resource type="Texture2D" uid="uid://ct5t75xvceeh4" path="res://ui/assets/border.png" id="3_pa1oa"]
[ext_resource type="Texture2D" uid="uid://dc5lnux6c0pk4" path="res://ui/assets/silver_coin.png" id="4_pa1oa"]
[ext_resource type="Texture2D" uid="uid://c10oxytke341o" path="res://scale/Base.png" id="4_x7jpl"]
[ext_resource type="Texture2D" uid="uid://bxtkf3tfayv3x" path="res://ui/assets/bok_choy.png" id="5_ay4pc"]
[ext_resource type="Texture2D" uid="uid://dwtcmegyrnel" path="res://scale/Rod.png" id="5_os0ka"]
[ext_resource type="Texture2D" uid="uid://daj0i47s7c0ig" path="res://ui/assets/ham.png" id="6_bi8hs"]
[ext_resource type="Texture2D" uid="uid://bm4ays0q502ys" path="res://scale/scale_plate.png" id="6_diyc5"]
[ext_resource type="Texture2D" uid="uid://c6bthm3u5hvhf" path="res://ui/assets/cheese.png" id="7_hrmpd"]
[ext_resource type="Texture2D" uid="uid://ca30whs8m452u" path="res://characters/vendors/dagny_portrait.png" id="8_diyc5"]

[sub_resource type="LabelSettings" id="LabelSettings_ay4pc"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bi8hs"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hrmpd"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x7jpl"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_os0ka"]
font_color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
layer = 110
script = ExtResource("1_8asm8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 110

[node name="Menu" type="Control" parent="CanvasLayer"]
z_index = 110
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_pa1oa")

[node name="Forground" type="TextureRect" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_os0ka")
expand_mode = 3

[node name="Mc" type="Sprite2D" parent="CanvasLayer/Menu/Forground"]
modulate = Color(0.756863, 0.635294, 0.482353, 0.439216)
position = Vector2(1061, 451)
scale = Vector2(0.110752, 0.0981449)
texture = ExtResource("3_hrmpd")

[node name="Base" type="Sprite2D" parent="CanvasLayer/Menu/Forground"]
modulate = Color(0.756863, 0.635294, 0.482353, 0.439216)
position = Vector2(659, 184)
scale = Vector2(0.0884541, 0.0749995)
texture = ExtResource("4_x7jpl")

[node name="Rod" type="Sprite2D" parent="CanvasLayer/Menu/Forground/Base"]
show_behind_parent = true
position = Vector2(-10.9409, -1180.78)
rotation = 0.523598
scale = Vector2(3.72337, 3.48649)
texture = ExtResource("5_os0ka")

[node name="ScalePlate2" type="Sprite2D" parent="CanvasLayer/Menu/Forground/Base/Rod"]
show_behind_parent = true
position = Vector2(366.696, 165.281)
rotation = -0.523598
scale = Vector2(0.22665, 0.271249)
texture = ExtResource("6_diyc5")

[node name="ScalePlate" type="Sprite2D" parent="CanvasLayer/Menu/Forground/Base/Rod"]
show_behind_parent = true
position = Vector2(-171.067, 172.569)
rotation = -0.523598
scale = Vector2(0.22665, 0.271249)
texture = ExtResource("6_diyc5")

[node name="DagnyPortrait" type="Sprite2D" parent="CanvasLayer/Menu/Forground"]
modulate = Color(0.756863, 0.635294, 0.482353, 0.439216)
position = Vector2(196.025, 260.26)
rotation = -3.14159
scale = Vector2(0.0961189, 0.0961189)
texture = ExtResource("8_diyc5")
flip_h = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -246.0
offset_top = 173.0
offset_right = 246.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 69
alignment = 1

[node name="GameTitle" type="Label" parent="CanvasLayer/Menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_pa1oa")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "The Merchant"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="bStart" type="Button" parent="CanvasLayer/Menu/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="bSettings" type="Button" parent="CanvasLayer/Menu/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings
"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 115

[node name="Settings" type="Control" parent="CanvasLayer2"]
unique_name_in_owner = true
visible = false
z_index = 115
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_pa1oa")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0716773, 0.0687477, 0.0608344, 0.937255)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer2/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_right = 400

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/Settings/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="GridContainer" type="GridContainer" parent="CanvasLayer2/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 15
columns = 2

[node name="MusicLabel" type="Label" parent="CanvasLayer2/Settings/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music"
vertical_alignment = 1

[node name="MusicScrollBar" type="HSlider" parent="CanvasLayer2/Settings/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0

[node name="SfxLabel" type="Label" parent="CanvasLayer2/Settings/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SFX"
vertical_alignment = 1

[node name="SfxScrollBar" type="HSlider" parent="CanvasLayer2/Settings/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer2/Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 69
theme_override_constants/margin_right = 69

[node name="bMenu" type="Button" parent="CanvasLayer2/Settings/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Menu"

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
layer = 50

[node name="HUD" type="Control" parent="CanvasLayer3"]
z_index = 99
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_pa1oa")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer3/HUD"]
layout_mode = 1
offset_left = 74.0
offset_top = 102.0
offset_right = 244.0
offset_bottom = 147.0
alignment = 1

[node name="ColorRect" type="NinePatchRect" parent="CanvasLayer3/HUD/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_pa1oa")
region_rect = Rect2(0, 0, 32, 16)
patch_margin_left = 3
patch_margin_top = 13
patch_margin_right = 3
patch_margin_bottom = 13

[node name="GridContainer" type="GridContainer" parent="CanvasLayer3/HUD/VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -16.0
offset_right = 76.5
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="tGoldCoin" type="TextureRect" parent="CanvasLayer3/HUD/VBoxContainer/ColorRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_gycre")

[node name="lGoldCoin" type="Label" parent="CanvasLayer3/HUD/VBoxContainer/ColorRect/GridContainer"]
texture_filter = 2
layout_mode = 2
text = "x 999"
label_settings = SubResource("LabelSettings_ay4pc")

[node name="tSilverCoin" type="TextureRect" parent="CanvasLayer3/HUD/VBoxContainer/ColorRect/GridContainer"]
layout_mode = 2
texture = ExtResource("4_pa1oa")

[node name="lSilvercoin" type="Label" parent="CanvasLayer3/HUD/VBoxContainer/ColorRect/GridContainer"]
texture_filter = 2
layout_mode = 2
text = "x 999"
label_settings = SubResource("LabelSettings_bi8hs")

[node name="Label" type="Label" parent="CanvasLayer3/HUD/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.992157, 0.819608, 0.47451, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
text = "Pause [P]"

[node name="PricesContainer" type="HBoxContainer" parent="CanvasLayer3/HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -515.0
offset_top = -72.0
offset_right = 513.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ColorRect2" type="NinePatchRect" parent="CanvasLayer3/HUD/PricesContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_pa1oa")
region_rect = Rect2(0, 0, 32, 16)
patch_margin_left = 3
patch_margin_top = 13
patch_margin_right = 3
patch_margin_bottom = 13

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer3/HUD/PricesContainer/ColorRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -261.5
offset_top = -16.0
offset_right = 261.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="tVegetable" type="TextureRect" parent="CanvasLayer3/HUD/PricesContainer/ColorRect2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_ay4pc")

[node name="lVegetable" type="Label" parent="CanvasLayer3/HUD/PricesContainer/ColorRect2/HBoxContainer"]
layout_mode = 2
text = " 15 silver / pound"
label_settings = SubResource("LabelSettings_hrmpd")

[node name="VSeparator2" type="VSeparator" parent="CanvasLayer3/HUD/PricesContainer/ColorRect2/HBoxContainer"]
layout_mode = 2

[node name="tMeat" type="TextureRect" parent="CanvasLayer3/HUD/PricesContainer/ColorRect2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_bi8hs")

[node name="lMeat" type="Label" parent="CanvasLayer3/HUD/PricesContainer/ColorRect2/HBoxContainer"]
layout_mode = 2
text = "35 silver / pound"
label_settings = SubResource("LabelSettings_x7jpl")

[node name="VSeparator4" type="VSeparator" parent="CanvasLayer3/HUD/PricesContainer/ColorRect2/HBoxContainer"]
layout_mode = 2

[node name="tCheese" type="TextureRect" parent="CanvasLayer3/HUD/PricesContainer/ColorRect2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_hrmpd")

[node name="lCheese" type="Label" parent="CanvasLayer3/HUD/PricesContainer/ColorRect2/HBoxContainer"]
layout_mode = 2
text = "45 silver / pound"
label_settings = SubResource("LabelSettings_os0ka")
